--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,22 @@ language: python
 dist: focal
 
 python:
-- "3.10"
+  - "3.10"
 
 env:
-- DJANGO=5.0.2
+  - DJANGO=5.0.2
 
 install:
-- pip install -r requirements.txt
+  - pip install -r requirements.txt
 
 script:
-- python manage.py test
+  - python manage.py test
+
+deploy:
+  provider: elasticbeanstalk
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  region: "us-west-2"
+  app: "django-tutorial"
+  env: "django-env"
+  bucket_name: "elasticbeanstalk-us-west-2-419323569300"
