--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.7.2
 black==24.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coverage==6.5.0
+coveralls==3.3.1
 Django==5.0.2
+docopt==0.6.2
 flake8==7.0.0
+idna==3.6
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
@@ -11,7 +17,9 @@ pathspec==0.12.1
 platformdirs==4.2.0
 pycodestyle==2.11.1
 pyflakes==3.2.0
+requests==2.31.0
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.10.0
 tzdata==2024.1
+urllib3==2.2.1
