--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 script:
   - black --check .
   - flake8 .
-  - coverage --source=mysite,polls manage.py test
+  - coverage run --source=mysite,polls manage.py test
 
 after_script:
   - coveralls
